[metadata]
name = brewkit
version = 0.0.1
author = llamicron
author-email = llamicron@gmail.com
summary = Tools for brewing devices
description-file =
  README.md
home-page = http://github.com/llamicron/brewkit
requires-dist = setuptools
[files]
packages =
  brewkit
extra_files =
  LICENSE
[entry_points]
  brewkit = brewkit:main
