[metadata]
name = brewkit
author = llamicron
author-email = llamicron@gmail.com
summary = Tools for brewing devices
description-file =
  readme.md
home-page = http://github.com/llamicron/brewkit
requires-dist = setuptools
[files]
packages =
  brewkit
extra_files =
  LICENSE
  readme.md
[entry_points]
  console_scripts =
    brewkit = brewkit:main
